--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,20 @@
 <resources>
-    <string name="app_name">WorldNum2</string>
+    <string name="app_name">RainBerry</string>
     <string name="query">请输入国家或区号</string>
     <string name="title">国际区号查询</string>
     <string name="root_fail_text">请输入国家或区号</string>
+    <string name="title_name">备忘录</string>
+    <string name="create_button_name">+\n新建</string>
+    <string name="text_tile">标题：</string>
+    <string name="edit_hint">请输入标题</string>
+    <string name="button_back">＜</string>
+    <string name="button_save">保存</string>
+    <string name="edit_body_hint">请输入内容...</string>
+    <string name="edit_title_time_hint">这里显示时间</string>
+    <string name="edit_title_text">新建备忘录</string>
+    <string name="str_upcoming">待办</string>
+    <string name="str_notice">提醒</string>
+    <string name="other_operation">其他选项：</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
